crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__expr_precedence-3.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"2 - 3 - 4\").unwrap()"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Subtract(
                            (
                                Subtract(
                                    (
                                        Number(
                                            (
                                                2.0,
                                                0..1,
                                            ),
                                        ),
                                        0..1,
                                    ),
                                    (
                                        Number(
                                            (
                                                3.0,
                                                4..5,
                                            ),
                                        ),
                                        4..5,
                                    ),
                                ),
                                0..5,
                            ),
                            (
                                Number(
                                    (
                                        4.0,
                                        8..9,
                                    ),
                                ),
                                8..9,
                            ),
                        ),
                        0..9,
                    ),
                ),
                0..9,
            ),
        ),
        0..9,
    ),
]
