crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__expr_precedence-5.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"-(2 + 3) * 5\"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Multiply(
                            (
                                Neg(
                                    (
                                        "-",
                                        0..1,
                                    ),
                                    (
                                        Parentheses(
                                            (
                                                Add(
                                                    (
                                                        Number(
                                                            (
                                                                2.0,
                                                                2..3,
                                                            ),
                                                        ),
                                                        2..3,
                                                    ),
                                                    (
                                                        Number(
                                                            (
                                                                3.0,
                                                                6..7,
                                                            ),
                                                        ),
                                                        6..7,
                                                    ),
                                                ),
                                                2..7,
                                            ),
                                        ),
                                        1..8,
                                    ),
                                ),
                                1..8,
                            ),
                            (
                                Number(
                                    (
                                        5.0,
                                        11..12,
                                    ),
                                ),
                                11..12,
                            ),
                        ),
                        1..12,
                    ),
                ),
                0..12,
            ),
        ),
        0..12,
    ),
]
