crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__expr_precedence-6.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"(8+2)*(7-3)/2\").unwrap()"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Divide(
                            (
                                Multiply(
                                    (
                                        Parentheses(
                                            (
                                                Add(
                                                    (
                                                        Number(
                                                            (
                                                                8.0,
                                                                1..2,
                                                            ),
                                                        ),
                                                        1..2,
                                                    ),
                                                    (
                                                        Number(
                                                            (
                                                                2.0,
                                                                3..4,
                                                            ),
                                                        ),
                                                        3..4,
                                                    ),
                                                ),
                                                1..4,
                                            ),
                                        ),
                                        0..5,
                                    ),
                                    (
                                        Parentheses(
                                            (
                                                Subtract(
                                                    (
                                                        Number(
                                                            (
                                                                7.0,
                                                                7..8,
                                                            ),
                                                        ),
                                                        7..8,
                                                    ),
                                                    (
                                                        Number(
                                                            (
                                                                3.0,
                                                                9..10,
                                                            ),
                                                        ),
                                                        9..10,
                                                    ),
                                                ),
                                                7..10,
                                            ),
                                        ),
                                        6..11,
                                    ),
                                ),
                                0..11,
                            ),
                            (
                                Number(
                                    (
                                        2.0,
                                        12..13,
                                    ),
                                ),
                                12..13,
                            ),
                        ),
                        0..13,
                    ),
                ),
                0..13,
            ),
        ),
        0..13,
    ),
]
