crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__expr_precedence-8.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"25 / 5 * 3 + 7 - 2 * 4\").unwrap()"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Subtract(
                            (
                                Add(
                                    (
                                        Multiply(
                                            (
                                                Divide(
                                                    (
                                                        Number(
                                                            (
                                                                25.0,
                                                                0..2,
                                                            ),
                                                        ),
                                                        0..2,
                                                    ),
                                                    (
                                                        Number(
                                                            (
                                                                5.0,
                                                                5..6,
                                                            ),
                                                        ),
                                                        5..6,
                                                    ),
                                                ),
                                                0..6,
                                            ),
                                            (
                                                Number(
                                                    (
                                                        3.0,
                                                        9..10,
                                                    ),
                                                ),
                                                9..10,
                                            ),
                                        ),
                                        0..10,
                                    ),
                                    (
                                        Number(
                                            (
                                                7.0,
                                                13..14,
                                            ),
                                        ),
                                        13..14,
                                    ),
                                ),
                                0..14,
                            ),
                            (
                                Multiply(
                                    (
                                        Number(
                                            (
                                                2.0,
                                                17..18,
                                            ),
                                        ),
                                        17..18,
                                    ),
                                    (
                                        Number(
                                            (
                                                4.0,
                                                21..22,
                                            ),
                                        ),
                                        21..22,
                                    ),
                                ),
                                17..22,
                            ),
                        ),
                        0..22,
                    ),
                ),
                0..22,
            ),
        ),
        0..22,
    ),
]
