crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__expr_precedence-9.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"\n            2 + 5 > 3 + 4\n                then 15 + 10\n                else 5 - 4 <= 1/2\n                    then 3 * 4\n                    else 2\"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Ternary(
                            (
                                Gt(
                                    (
                                        Add(
                                            (
                                                Number(
                                                    (
                                                        2.0,
                                                        13..14,
                                                    ),
                                                ),
                                                13..14,
                                            ),
                                            (
                                                Number(
                                                    (
                                                        5.0,
                                                        17..18,
                                                    ),
                                                ),
                                                17..18,
                                            ),
                                        ),
                                        13..18,
                                    ),
                                    (
                                        Add(
                                            (
                                                Number(
                                                    (
                                                        3.0,
                                                        21..22,
                                                    ),
                                                ),
                                                21..22,
                                            ),
                                            (
                                                Number(
                                                    (
                                                        4.0,
                                                        25..26,
                                                    ),
                                                ),
                                                25..26,
                                            ),
                                        ),
                                        21..26,
                                    ),
                                ),
                                13..26,
                            ),
                            (
                                "then",
                                43..47,
                            ),
                            (
                                Add(
                                    (
                                        Number(
                                            (
                                                15.0,
                                                48..50,
                                            ),
                                        ),
                                        48..50,
                                    ),
                                    (
                                        Number(
                                            (
                                                10.0,
                                                53..55,
                                            ),
                                        ),
                                        53..55,
                                    ),
                                ),
                                48..55,
                            ),
                            (
                                "else",
                                72..76,
                            ),
                            (
                                Ternary(
                                    (
                                        Le(
                                            (
                                                Subtract(
                                                    (
                                                        Number(
                                                            (
                                                                5.0,
                                                                77..78,
                                                            ),
                                                        ),
                                                        77..78,
                                                    ),
                                                    (
                                                        Number(
                                                            (
                                                                4.0,
                                                                81..82,
                                                            ),
                                                        ),
                                                        81..82,
                                                    ),
                                                ),
                                                77..82,
                                            ),
                                            (
                                                Divide(
                                                    (
                                                        Number(
                                                            (
                                                                1.0,
                                                                86..87,
                                                            ),
                                                        ),
                                                        86..87,
                                                    ),
                                                    (
                                                        Number(
                                                            (
                                                                2.0,
                                                                88..89,
                                                            ),
                                                        ),
                                                        88..89,
                                                    ),
                                                ),
                                                86..89,
                                            ),
                                        ),
                                        77..89,
                                    ),
                                    (
                                        "then",
                                        110..114,
                                    ),
                                    (
                                        Multiply(
                                            (
                                                Number(
                                                    (
                                                        3.0,
                                                        115..116,
                                                    ),
                                                ),
                                                115..116,
                                            ),
                                            (
                                                Number(
                                                    (
                                                        4.0,
                                                        119..120,
                                                    ),
                                                ),
                                                119..120,
                                            ),
                                        ),
                                        115..120,
                                    ),
                                    (
                                        "else",
                                        141..145,
                                    ),
                                    (
                                        Number(
                                            (
                                                2.0,
                                                146..147,
                                            ),
                                        ),
                                        146..147,
                                    ),
                                ),
                                77..147,
                            ),
                        ),
                        13..147,
                    ),
                ),
                13..147,
            ),
        ),
        13..147,
    ),
]
