crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__failure_handlers-3.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"foo()?\"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        FunctionInvocation(
                            [],
                            (
                                "foo",
                                0..3,
                            ),
                            [],
                            Some(
                                (
                                    Propagate,
                                    5..6,
                                ),
                            ),
                        ),
                        0..6,
                    ),
                ),
                0..6,
            ),
        ),
        0..6,
    ),
]
