crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__failure_handlers.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"$$?\"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Command(
                            [],
                            [
                                (
                                    Text(
                                        "$",
                                    ),
                                    0..1,
                                ),
                                (
                                    Text(
                                        "$",
                                    ),
                                    1..2,
                                ),
                            ],
                            Some(
                                (
                                    Propagate,
                                    2..3,
                                ),
                            ),
                        ),
                        0..3,
                    ),
                ),
                0..3,
            ),
        ),
        0..3,
    ),
]
