crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__function_def-10.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"fun foo(abc:  {\n        echo 10\n    }\"))"
---
(
    Some(
        [
            (
                FunctionDefinition(
                    [],
                    (
                        false,
                        0..37,
                    ),
                    (
                        "fun",
                        0..3,
                    ),
                    (
                        "foo",
                        4..7,
                    ),
                    [
                        (
                            Typed(
                                (
                                    false,
                                    8..8,
                                ),
                                (
                                    "abc",
                                    8..11,
                                ),
                                (
                                    <Invalid type>,
                                    14..12,
                                ),
                            ),
                            8..12,
                        ),
                    ],
                    None,
                    [
                        (
                            Echo(
                                (
                                    "echo",
                                    24..28,
                                ),
                                (
                                    Number(
                                        (
                                            10.0,
                                            29..31,
                                        ),
                                    ),
                                    29..31,
                                ),
                            ),
                            24..31,
                        ),
                    ],
                ),
                0..37,
            ),
        ],
    ),
    [
        found '"{"' at 14..15 expected type,
        found '"{"' at 14..15 expected something else, '","', or '")"',
    ],
)
