crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__function_def-11.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"fun foo(abc: !WrongType {\n        echo 10\n    }\"))"
---
(
    Some(
        [
            (
                FunctionDefinition(
                    [],
                    (
                        false,
                        0..47,
                    ),
                    (
                        "fun",
                        0..3,
                    ),
                    (
                        "foo",
                        4..7,
                    ),
                    [
                        (
                            Typed(
                                (
                                    false,
                                    8..8,
                                ),
                                (
                                    "abc",
                                    8..11,
                                ),
                                (
                                    <Invalid type>,
                                    13..14,
                                ),
                            ),
                            8..14,
                        ),
                        (
                            Generic(
                                (
                                    false,
                                    14..14,
                                ),
                                (
                                    "WrongType",
                                    14..23,
                                ),
                            ),
                            14..23,
                        ),
                    ],
                    None,
                    [
                        (
                            Echo(
                                (
                                    "echo",
                                    34..38,
                                ),
                                (
                                    Number(
                                        (
                                            10.0,
                                            39..41,
                                        ),
                                    ),
                                    39..41,
                                ),
                            ),
                            34..41,
                        ),
                    ],
                ),
                0..47,
            ),
        ],
    ),
    [
        found '"!"' at 13..14 expected type,
        found '"WrongType"' at 14..23 expected '","',
        found '"{"' at 24..25 expected '":"', '","', or '")"',
    ],
)
