crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__function_def-12.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"pub fun func() {}\"))"
---
[
    (
        FunctionDefinition(
            [],
            (
                true,
                0..3,
            ),
            (
                "fun",
                4..7,
            ),
            (
                "func",
                8..12,
            ),
            [],
            None,
            [],
        ),
        0..17,
    ),
]
